# Iolive

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Ioface/: CMakeLists.txt
Ioface/Dependencies/intraface/include/intraface/: FaceAlignment.h  Marcos.h  XXDescriptor.h  binary_model_file.h
Ioface/Dependencies/opencv-3.0.0/include/opencv2/: cvconfig.h  opencv_modules.hpp
Ioface/Dependencies/opencv-3.0.0/lib/Debug/: opencv_calib3d300d.lib  opencv_core300d.lib  opencv_features2d300d.lib  opencv_highgui300d.lib  opencv_imgproc300d.lib  opencv_objdetect300d.lib  opencv_videoio300d.lib
Ioface/Dependencies/opencv-3.0.0/lib/Release/: opencv_calib3d300.lib  opencv_core300.lib  opencv_highgui300.lib  opencv_imgproc300.lib  opencv_objdetect300.lib  opencv_videoio300.lib
Ioface/Dependencies/opencv-3.2.0/include/opencv2/: opencv_modules.hpp
Ioface/Dependencies/opencv-3.2.0/lib/Debug/: opencv_calib3d320d.lib  opencv_core320d.lib  opencv_features2d320d.lib  opencv_highgui320d.lib  opencv_imgproc320d.lib  opencv_objdetect320d.lib  opencv_videoio320d.lib
Ioface/Dependencies/opencv-3.2.0/lib/Release/: opencv_calib3d320.lib  opencv_core320.lib  opencv_features2d320.lib  opencv_highgui320.lib  opencv_imgproc320.lib  opencv_objdetect320.lib  opencv_videoio320.lib
Ioface/Include/Ioface/: Ioface.hpp
Ioface/Source/: Ioface.cpp
Iolive/: BuildCubism.cmake  CMakeLists.txt  Iolive.rc
Iolive/Source/: Application.cpp  Application.hpp  IofaceBridge.hpp  Logger.hpp  Macro.hpp  Main.cpp  MainGui.cpp  MainGui.hpp  MathUtils.hpp  ParameterBridge.hpp  Window.cpp  Window.hpp
Iolive/Source/GUI/: IoliveGui.cpp  IoliveGui.hpp  Utility.cpp  Utility.hpp
Iolive/Source/GUI/Widget/: MainLWidget.hpp  MainRWidget.hpp  MainWidget.hpp  ParameterGui.hpp
Iolive/Source/GUI/Widget/Component/: Checkbox.hpp  ParameterValue.hpp
Iolive/Source/GUIComponent/: Checkbox.hpp  Hotkeys.hpp
Iolive/Source/Live2D/: Live2DManager.cpp  Live2DManager.hpp  Model2D.cpp  Model2D.hpp  Utility.cpp  Utility.hpp
Iolive/Source/Live2D/Component/: TextureManager.cpp  TextureManager.hpp
Iolive/Source/Live2D/CubismSamples/: LAppAllocator.hpp
Iolive/Source/Utility/: DeviceEnumerator.cpp  DeviceEnumerator.h  JsonManager.hpp  Logger.hpp  MathUtils.hpp  WindowsAPI.hpp
